--- a/sync-wave-common/build.gradle
+++ b/sync-wave-common/build.gradle
@@ -17,6 +17,9 @@ dependencies {
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 
+    //slack
+    implementation 'com.slack.api:slack-api-client:1.44.1'
+
     // jackson
     //implementation으로 선언된 의존성은 컴파일 시 클래스 경로에 포함되지만, 해당 모듈을 사용하는 다른 모듈에서는 사용할 수 없습니다.
     api group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.3'
